<resources>
    <string name="app_name">SliderDemo</string>

    <string name="sample_activity">sample activity</string>
    <string name="custom_activity">custom activity</string>
    <string name="xml_activity">xml activity</string>
    <string name="sample_fragment">sample fragment</string>
    <string name="link_lv_fragment">link listView fragment</string>
    <string name="custom_slidable_fragment">custom slidable fragment</string>
    <string name="dialog_fragment">dialog fragment</string>
    <string name="dialog">dialog</string>
    <string name="title_activity">title activity</string>
    <string name="position_left">Left</string>
    <string name="position_right">Right</string>
    <string name="position_top">Top</string>
    <string name="position_bottom">Bottom</string>
    <string name="position_horizontal">Horizontal</string>
    <string name="position_vertical">Vertical</string>
    <string name="position_all">All</string>
    <string name="title_activity_fragment">Settings</string>
    <string name="edge_only">edgeOnly:</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="text_github">GITHUB</string>
    <string name="github_url"><![CDATA[https://github.com/KobeKomi/Slider]]></string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_xmll">XmllActivity</string>
    <string name="custom_slidable_tip">touch this view(blue range) can not slide fragment</string>
</resources>
