<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SampleActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbt_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/position_left" />

            <RadioButton
                android:id="@+id/rbt_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position_right" />

            <RadioButton
                android:id="@+id/rbt_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position_top" />

            <RadioButton
                android:id="@+id/rbt_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position_bottom" />

            <RadioButton
                android:id="@+id/rbt_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position_horizontal" />

            <RadioButton
                android:id="@+id/rbt_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position_vertical" />

            <RadioButton
                android:id="@+id/rbt_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position_all" />
        </RadioGroup>

        <Switch
            android:id="@+id/swich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/radio_group"
            android:text="@string/edge_only" />


    </RelativeLayout>



</RelativeLayout>
